examples/bad/reflect_non_pod.mko
// EXPECT: reflect_value_of expects
// Chan fields remain non-reflectable.
struct Wrap {
    c: chan[int]
    t: int
}

fn main() {
    let c = chan_open[int](0)
    let w = Wrap { c: c, t: 1 }
    let _ = reflect_value_of(w)
}
